adjustments to the packager code