@@ -1,7 +1,23 @@
+/*
+* Copyright 2010-2011 Research In Motion Limited.
+*
+* Licensed under the Apache License, Version 2.0 (the "License");
+* you may not use this file except in compliance with the License.
+* You may obtain a copy of the License at
+*
+* http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
 package net.rim.tumbler.serialize;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 import java.util.Vector;
 import java.util.regex.Pattern;
@@ -13,253 +29,253 @@ import net.rim.tumbler.file.TemplateFile;
 
 public class WidgetConfig_v1Serializer implements WidgetConfigSerializer {
     
-    private static final String         EOL = System.getProperty("line.separator");
-    private static final String         TAB = "    ";
-    private static final String         AUTOGEN_HEADER =
+    private static final String NL = System.getProperty("line.separator");
+    private static final String TAB = "    ";
+    private static final String NL_LVL_0 = NL + TAB + TAB;
+    private static final String NL_LVL_1 = NL + TAB + TAB + TAB;
+    private static final String NL_LVL_2 = NL + TAB + TAB + TAB + TAB;
+    private static final String NL_LVL_3 = NL + TAB + TAB + TAB + TAB + TAB;
+    private static final String NL_LVL_4 = NL + TAB + TAB + TAB + TAB + TAB + TAB;
+    private static final String NL_LVL_5 = NL + TAB + TAB + TAB + TAB + TAB + TAB + TAB;
+    private static final String AUTOGEN_HEADER =
         "///" +
-        "/// AUTO-GENERATED CLASS FROM WEB COMPONENT PACK - edit with caution" + EOL +      
-        "///" + EOL + EOL +
-        "/*" + EOL +
-        " * WidgetConfigAutoGen.java" + EOL +
-        " *" + EOL +
-        " * © Research In Motion Limited, 2009" + EOL +
-        " * Confidential and proprietary." + EOL +
-        " */" + EOL +
-        "package blackberry.web.widget.autogen;" + EOL +
-        "import blackberry.web.widget.impl.WidgetConfigImpl;" + EOL +
-        "import blackberry.web.widget.loadingScreen.TransitionConstants;" + EOL +
-        "import net.rim.device.api.web.WidgetAccess;" + EOL +
-        "import net.rim.device.api.web.WidgetConfig;" + EOL +
-        "import net.rim.device.api.web.WidgetFeature;" + EOL +
-        "import net.rim.device.api.io.transport.TransportInfo;" + EOL +
-        "import java.util.Hashtable;" + EOL +
-        "/*" + EOL +
-        " * see blackberry.web.widget.WidgetConfig" + EOL +
-        " */" + EOL +
-        "public final class WidgetConfigAutoGen extends WidgetConfigImpl {" + EOL +
-        "    public WidgetConfigAutoGen() {" + EOL;
+        "/// AUTO-GENERATED CLASS FROM WEB COMPONENT PACK - edit with caution" + NL +      
+        "///" + NL + NL +
+        "/*" + NL +
+        " * WidgetConfigAutoGen.java" + NL +
+        " *" + NL +
+        " * © Research In Motion Limited, 2009-2011" + NL +
+        " * Confidential and proprietary." + NL +
+        " */" + NL +
+        "package blackberry.web.widget.autogen;" + NL +
+        "import blackberry.web.widget.impl.WidgetConfigImpl;" + NL +
+        "import blackberry.web.widget.loadingScreen.TransitionConstants;" + NL +
+        "import net.rim.device.api.web.WidgetAccess;" + NL +
+        "import net.rim.device.api.web.WidgetConfig;" + NL +
+        "import net.rim.device.api.web.WidgetFeature;" + NL +
+        "import net.rim.device.api.io.transport.TransportInfo;" + NL +
+        "import java.util.Hashtable;" + NL +
+        "/*" + NL +
+        " * see blackberry.web.widget.WidgetConfig" + NL +
+        " */" + NL +
+        "public final class WidgetConfigAutoGen extends WidgetConfigImpl {" + NL +
+        "    public WidgetConfigAutoGen() {" + NL;
 
-    private StringBuffer        _buffer;
-    private Map<String, String> _memberMap;
-    private WidgetConfig        _widgetConfig;
+    private WidgetConfig _widgetConfig;
     
     public WidgetConfig_v1Serializer(WidgetConfig widgetConfig) {
-        _buffer = new StringBuffer();
-        _memberMap = new HashMap<String, String>();
-		
-        // populate the basic members
-        // MKS: special characters for Java source file: escape /, ", ' for Java source 
-        _memberMap.put("_id",                       widgetConfig.getID());
-        _memberMap.put("_name",                     widgetConfig.getName());
-        _memberMap.put("_description",              widgetConfig.getDescription());
-        _memberMap.put("_content",                  widgetConfig.getContent());
-        _memberMap.put("_configXML",                widgetConfig.getConfigXML());
-        _memberMap.put("_backButtonBehaviour",      widgetConfig.getBackButtonBehaviour());
-        _memberMap.put("_contentType",              widgetConfig.getContentType());
-        _memberMap.put("_contentCharset",           widgetConfig.getContentCharSet());
-        _memberMap.put("_license",                  widgetConfig.getLicense());
-        _memberMap.put("_licenseURL",               widgetConfig.getLicenseURL());
-        _memberMap.put("_author",                   widgetConfig.getAuthor());
-        _memberMap.put("_copyright",                widgetConfig.getCopyright());
-        _memberMap.put("_authorEmail",              widgetConfig.getAuthorEmail());
-        _memberMap.put("_loadingScreenColor",       widgetConfig.getLoadingScreenColour());
-        _memberMap.put("_backgroundImage",       	widgetConfig.getBackgroundImage());
-        _memberMap.put("_foregroundImage",       	widgetConfig.getForegroundImage());
-        _memberMap.put("_authorURL",                widgetConfig.getAuthorURL());
-        _memberMap.put("_backgroundSource",         widgetConfig.getBackgroundSource());
-        _memberMap.put("_foregroundSource",         widgetConfig.getForegroundSource());
-
-        
         _widgetConfig = widgetConfig;
     }
     
     public byte[] serialize() {
-        _buffer.append(TemplateFile.refactor(AUTOGEN_HEADER));
-        Set<String> members = _memberMap.keySet();
         
-        // iterate memberMap
-        for( String member : members ) {
-            String value = _memberMap.get(member);
+        StringBuilder buffer = new StringBuilder();
+        Map<String, String> memberMap = new HashMap<String, String>();
+        
+        // Populate the basic members
+        // Special characters for Java source file: escape /, ", ' for Java source 
+        memberMap.put("_id",                  _widgetConfig.getID());
+        memberMap.put("_name",                _widgetConfig.getName());
+        memberMap.put("_description",         _widgetConfig.getDescription());
+        memberMap.put("_content",             _widgetConfig.getContent());
+        memberMap.put("_configXML",           _widgetConfig.getConfigXML());
+        memberMap.put("_backButtonBehaviour", _widgetConfig.getBackButtonBehaviour());
+        memberMap.put("_contentType",         _widgetConfig.getContentType());
+        memberMap.put("_contentCharset",      _widgetConfig.getContentCharSet());
+        memberMap.put("_license",             _widgetConfig.getLicense());
+        memberMap.put("_licenseURL",          _widgetConfig.getLicenseURL());
+        memberMap.put("_author",              _widgetConfig.getAuthor());
+        memberMap.put("_copyright",           _widgetConfig.getCopyright());
+        memberMap.put("_authorEmail",         _widgetConfig.getAuthorEmail());
+        memberMap.put("_loadingScreenColor",  _widgetConfig.getLoadingScreenColour());
+        memberMap.put("_backgroundImage",     _widgetConfig.getBackgroundImage());
+        memberMap.put("_foregroundImage",     _widgetConfig.getForegroundImage());
+        memberMap.put("_authorURL",           _widgetConfig.getAuthorURL());
+        memberMap.put("_backgroundSource",    _widgetConfig.getBackgroundSource());
+        memberMap.put("_foregroundSource",    _widgetConfig.getForegroundSource());
+        
+        buffer.append(TemplateFile.refactor(AUTOGEN_HEADER));
+        Set<Entry<String, String>> entrySet = memberMap.entrySet();
+        
+        // Iterate memberMap
+        for (Entry< String, String > entry : entrySet) {
+            String value = entry.getValue();
             if (value != null) {
-                _buffer.append(makeLine(
-                        member + " = \"" + escapeSpecialCharacterForJavaSource(value) + "\";", 0));
+                buffer.append(entry.getKey()).append(" = \"");
+                buffer.append(escapeSpecialCharacterForJavaSource(value));
+                buffer.append("\";").append(NL_LVL_0); 
             }
         }
         
         // * present
         if (_widgetConfig.allowMultiAccess()) {
-            _buffer.append(makeLine("_hasMultiAccess = true;", 0));
+            buffer.append("_hasMultiAccess = true;").append(NL_LVL_0);
         }
        
-        // add icons
+        // Add icons
         if (_widgetConfig.getIconSrc().size() > 0) {
-            _buffer.append(makeLine(
-                     "_icon = \"" + _widgetConfig.getIconSrc().firstElement() + "\";", 0));
+            buffer.append("_icon = \"").append(_widgetConfig.getIconSrc().firstElement())
+                  .append("\";").append(NL_LVL_0);
             if (_widgetConfig.getHoverIconSrc().size() > 0) {
-                _buffer.append(makeLine(
-                        "_iconHover = \"" + _widgetConfig.getHoverIconSrc().firstElement() + "\";", 0));                
+                buffer.append("_iconHover = \"")
+                      .append(_widgetConfig.getHoverIconSrc().firstElement())
+                      .append("\";").append(NL_LVL_0);           
             }
         }
         
-        // add custom headers
+        // Add custom headers
         for( String key : _widgetConfig.getCustomHeaders().keySet()) {
-            _buffer.append(makeLine("_customHeaders.addProperty(", 0));
-            _buffer.append(makeLine("\"" + key + "\",", 1));
-            _buffer.append(makeLine("\"" + escapeSpecialCharacterForJavaSource(_widgetConfig.getCustomHeaders().get(key)) + "\");", 1));
+            buffer.append("_customHeaders.addProperty(").append(NL_LVL_0);
+            buffer.append("\"").append(key).append("\"," + NL_LVL_1);
+            buffer.append("\"").append(escapeSpecialCharacterForJavaSource(_widgetConfig.getCustomHeaders().get(key)))
+                  .append("\");").append(NL_LVL_1);
         }
         
-        // set navigation mode
+        // Set navigation mode
         if (_widgetConfig.getNavigationMode()) {
-            _buffer.append(makeLine("_widgetNavigationMode = true;", 0));
+            buffer.append("_widgetNavigationMode = true;").append(NL_LVL_0);
         }
 
-        // add LoadingScreen configuration
+        // Add LoadingScreen configuration
         if (_widgetConfig.getFirstPageLoad()) {
-            _buffer.append(makeLine("_firstPageLoad = true;", 0));
+            buffer.append("_firstPageLoad = true;").append(NL_LVL_0);
         }        
         if (_widgetConfig.getRemotePageLoad()) {
-            _buffer.append(makeLine("_remotePageLoad = true;", 0));
+            buffer.append("_remotePageLoad = true;").append(NL_LVL_0);
         }     
         if (_widgetConfig.getLocalPageLoad()) {
-            _buffer.append(makeLine("_localPageLoad = true;", 0));
+            buffer.append("_localPageLoad = true;").append(NL_LVL_0);
         }     
         
-        // add TransitionEffect configuration
+        // Add TransitionEffect configuration
         if (_widgetConfig.getTransitionType() != null) {
-            _buffer.append(makeLine(
-                    "_transitionType = " + _widgetConfig.getTransitionType() + ";", 0));
+            buffer.append("_transitionType = ").append(_widgetConfig.getTransitionType())
+                  .append(";").append(NL_LVL_0);
             
             if (_widgetConfig.getTransitionDuration() >= 0) {
-                _buffer.append(makeLine(
-                        "_transitionDuration = " + _widgetConfig.getTransitionDuration() + ";", 0));
+                buffer.append("_transitionDuration = ")
+                      .append(_widgetConfig.getTransitionDuration())
+                      .append(";").append(NL_LVL_0);
             }
             
             if (_widgetConfig.getTransitionDirection() != null) {
-                _buffer.append(makeLine(
-                        "_transitionDirection = " + _widgetConfig.getTransitionDirection() + ";", 0));
+                buffer.append("_transitionDirection = ")
+                      .append(_widgetConfig.getTransitionDirection())
+                      .append(";").append(NL_LVL_0);
             }            
         }
         
-        // add cache options
+        // Add cache options
         if (_widgetConfig.isCacheEnabled() != null) {
-            _buffer.append(makeLine("_cacheEnabled = " + _widgetConfig.isCacheEnabled() + ";", 0));
+            buffer.append("_cacheEnabled = ").append(_widgetConfig.isCacheEnabled())
+                  .append(";").append(NL_LVL_0);
         }
         if (_widgetConfig.getAggressiveCacheAge() != null) {
         	// Enable aggressive caching if applicable
         	if(_widgetConfig.isAggressiveCacheEnabled()!=null) {
-	        	_buffer.append(makeLine("_aggressivelyCaching = " 
-	            		+ _widgetConfig.isAggressiveCacheEnabled() + ";", 0));
+	        	buffer.append("_aggressivelyCaching = ")
+	        	      .append(_widgetConfig.isAggressiveCacheEnabled()).append(";")
+	        	      .append(NL_LVL_0);
         	}
-            _buffer.append(makeLine("_aggressiveCacheAge = " 
-            		+ _widgetConfig.getAggressiveCacheAge() + ";", 0));
+            buffer.append("_aggressiveCacheAge = ")
+                  .append(_widgetConfig.getAggressiveCacheAge())
+                  .append(";").append(NL_LVL_0);
         }        
         if (_widgetConfig.getMaxCacheSize() != null) {
-            _buffer.append(makeLine("_maxCacheSize = " 
-            		+ _widgetConfig.getMaxCacheSize() + ";", 0));
+            buffer.append("_maxCacheSize = ").append(_widgetConfig.getMaxCacheSize())
+                  .append(";").append(NL_LVL_0);
         }
         if (_widgetConfig.getMaxCacheItemSize() != null) {
-            _buffer.append(makeLine("_maxCacheable = " 
-            		+ _widgetConfig.getMaxCacheItemSize() + ";", 0));
+            buffer.append("_maxCacheable = ").append(_widgetConfig.getMaxCacheItemSize())
+                  .append(";").append(NL_LVL_0);
         }
-        //Debug issue fix ?
+        // Debug issue fix ?
         if(_widgetConfig.isDebugEnabled()) {
-        	_buffer.append(makeLine("_debugEnabled = true;", 0));
+        	buffer.append("_debugEnabled = true;").append(NL_LVL_0);
         }
         
-        //Auto-Startup options
+        // Auto-Startup options
         if(_widgetConfig.allowInvokeParams()) {
-        	_buffer.append(makeLine("_allowInvokeParams = " 
-            		+ _widgetConfig.allowInvokeParams() + ";", 0));
+        	buffer.append("_allowInvokeParams = ").append(_widgetConfig.allowInvokeParams())
+        	      .append(";").append(NL_LVL_0);
         }
         
         if(_widgetConfig.isStartupEnabled()) {
-        	_buffer.append(makeLine("_runOnStartup = " 
-            		+ _widgetConfig.isStartupEnabled() + ";", 0));
+        	buffer.append("_runOnStartup = ").append(_widgetConfig.isStartupEnabled())
+        	      .append(";").append(NL_LVL_0);
         }
         
-        // add 3rd party extensions
+        // Add 3rd party extensions
         for (int j = 0; j < _widgetConfig.getExtensionClasses().size(); j++) {
         	String extensionClass = _widgetConfig.getExtensionClasses().elementAt(j);
-        	_buffer.append(makeLine(
-        			"_widgetExtensions.addElement(new " + extensionClass + "());", 0));
+        	buffer.append("_widgetExtensions.addElement(new ")
+        	      .append(extensionClass).append("());").append(NL_LVL_0);
         	
         }
         
-        // add transport
+        // Add transport
         if (_widgetConfig.getTransportTimeout() >= 0) {
-            _buffer.append(makeLine(
-                    "_transportTimeout = new Integer(" + _widgetConfig.getTransportTimeout() + ");", 0));
+            buffer.append("_transportTimeout = new Integer(")
+                  .append(_widgetConfig.getTransportTimeout()).append(");").append(NL_LVL_0);
         }
         if (_widgetConfig.getTransportOrder() != null) {
-            _buffer.append(makeLine(
-                    "_preferredTransports = new int[]{",0));
+            buffer.append("_preferredTransports = new int[]{").append(NL_LVL_0);
             for(int i=0; i<_widgetConfig.getTransportOrder().length; i++) {
                 String transport = _widgetConfig.getTransportOrder()[i];
                 if (i+1 != _widgetConfig.getTransportOrder().length) {
                     transport += ",";
                 }
-                _buffer.append(makeLine(transport, 1));
+                buffer.append(transport).append(NL_LVL_1);
             }
-            _buffer.append(makeLine("};", 0));
+            buffer.append("};").append(NL_LVL_0);
         }
         
-        // add access/features
+        // Add access/features
         if (_widgetConfig.getAccessTable().size() > 0) {
             String line;
-            _buffer.append(makeLine("try {", 0));
+            buffer.append("try {").append(NL_LVL_0);
             for (WidgetAccess key : _widgetConfig.getAccessTable().keySet()) {
                 line = "_accessList.put(";
-                _buffer.append(makeLine(line, 1));
+                buffer.append(line).append(NL_LVL_1);
                 String uri = key.getURI().toString();
                 if (uri.equals("WidgetConfig.WIDGET_LOCAL_DOMAIN")) {
                     line = uri + ",";
                 } else {
                     line = "\"" + uri + "\"" + ",";
                 }
-                _buffer.append(makeLine(line, 2));
-                _buffer.append(makeLine("new WidgetAccess(", 2));
-                _buffer.append(makeLine(line, 3));
-                line = (new Boolean(key.allowSubDomain())).toString() + ",";
-                _buffer.append(makeLine(line, 3));
-                _buffer.append(makeLine("new WidgetFeature[] {", 3));
+                buffer.append(line).append(NL_LVL_2);
+                buffer.append("new WidgetAccess(").append(NL_LVL_2);
+                buffer.append(line).append(NL_LVL_3);
+                line = (Boolean.valueOf(key.allowSubDomain())).toString() + ",";
+                buffer.append(line).append(NL_LVL_3);
+                buffer.append("new WidgetFeature[] {").append(NL_LVL_3);
 
                 Vector<?> wfList = (Vector<?>)_widgetConfig.getAccessTable().get(key);
                 for (int j = 0; j < wfList.size(); j++) {
-                    //if (j > 0) {
-                    //    addLine(",");
-                    //}
                     WidgetFeature wf = (WidgetFeature) wfList.get(j);
-                    _buffer.append(makeLine("new WidgetFeature(", 4));
+                    buffer.append("new WidgetFeature(").append(NL_LVL_4);
                     line = "\"" + wf.getID() + "\"" + ",";
-                    _buffer.append(makeLine(line, 5));
-                    line = (new Boolean(wf.isRequired())).toString() + ",";
-                    _buffer.append(makeLine(line, 5));
+                    buffer.append(line).append(NL_LVL_5);
+                    line = (Boolean.valueOf(wf.isRequired())).toString() + ",";
+                    buffer.append(line).append(NL_LVL_5);
                     line = "\"" + wf.getVersion() + "\"" + ",";
-                    _buffer.append(makeLine(line, 5));
+                    buffer.append(line).append(NL_LVL_5);
                     line = "null)";
                     if (j+1 != wfList.size()) {
                         line += ",";
                     }
-                    _buffer.append(makeLine(line, 5));
+                    buffer.append(line).append(NL_LVL_5);
                 }
-                _buffer.append(makeLine("}", 3));
-                _buffer.append(makeLine(")", 2));
-                _buffer.append(makeLine(");", 1));
+                buffer.append("}").append(NL_LVL_3);
+                buffer.append(")").append(NL_LVL_2);
+                buffer.append(");").append(NL_LVL_1);
             }
-            _buffer.append(makeLine("} catch (Exception e) {", 0));
-            _buffer.append(makeLine("// ignore this element - invalid URI", 1));
-            _buffer.append(makeLine("}", 0));
+            buffer.append("} catch (Exception e) {").append(NL_LVL_0);
+            buffer.append("// ignore this element - invalid URI").append(NL_LVL_1);
+            buffer.append("}").append(NL_LVL_0);
         }        
-        _buffer.append(EOL + TAB + "}" + EOL + "}");
-        return _buffer.toString().getBytes();
-    }
-    
-    private String makeLine(String toAdd, int level) {
-        String result = EOL + TAB + TAB;
-        for(int i=0; i<level; i++) {
-            result += TAB;
-        }
-        return result + toAdd;
+        buffer.append(NL).append(TAB).append("}").append(NL).append("}");
+        return buffer.toString().getBytes();
     }
     
 	private String escapeSpecialCharacterForJavaSource(String s) {
@@ -269,7 +285,9 @@ public class WidgetConfig_v1Serializer implements WidgetConfigSerializer {
 		// \ -> \\\\\\\\
 		// NOTE: \\\\ (4 SLASHES) stand for 1 \ (SLASH)
 		
-		if (s == null) return null;
+		if (s == null)
+		    return null;
+		
 		String ret = 
 			s.replaceAll(Pattern.quote("\\"), "\\\\\\\\")
 			 .replaceAll(Pattern.quote("\""), "\\\\\"")
